# smart_cashier_api

./: .env.example  Cargo.toml  README.md
migrations/2020-08-29-060232_accounts/: down.sql  up.sql
migrations/2020-08-29-060620_access_tokens/: down.sql  up.sql
migrations/2020-08-29-065535_roles/: up.sql
src/: db.rs  main.rs  schema.rs
src/helpers/: password.rs  token.rs
src/models/: access_token.rs  account.rs
