[package]
name = "smart_cashier"
version = "0.1.0"
authors = ["Ahmad Rifa'i <arifai209@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
chrono = "0.4.15"
time = "0.2.16"
lazy_static = "1.4.0"

rocket = "0.4.5"
diesel = { version = "1.4.4", features = ["postgres"] }

# Serde
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"

rust-crypto = "0.2.36"
bcrypt = "0.8.2"
hex = "0.4.2"
rand = "0.7.3"

r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"